--- a/src/apps/1688Web/webapp/stylus/index.styl
+++ b/src/apps/1688Web/webapp/stylus/index.styl
@@ -217,6 +217,8 @@ for i in (1..10)
 @require '../../components/sidebar/index'
 @require '../../components/footer/index'
 
+@require 'ie9fix'
+
 
 
 
