--- a/src/apps/1688Web/webapp/stylus/utils.styl
+++ b/src/apps/1688Web/webapp/stylus/utils.styl
@@ -3,6 +3,18 @@
 //hidden & visible
 .hidden
     display none !important
+
+.mobile-hidden
+    display block
+.mobile-visible
+    display none
+.mobile
+    .mobile-hidden
+        display none
+    .mobile-visible
+        display block
+
+/*
 .mobile-hidden
     display block !important
     @media MOBILE
@@ -24,7 +36,7 @@
     @media TABLET
         display none !important
     @media MOBILE
-        display none !important
+        display none !important*/
 
 //text-align
 .text-left
