--- a/src/apps/1688Web/components/footer/index.styl
+++ b/src/apps/1688Web/components/footer/index.styl
@@ -1,12 +1,207 @@
 FOOTER_BGC = BLUE_EBONYCLAY
 
+FOOTER_FONT_ALPHA = 0.6
+
+FOOTER_SM_PCT = 0.7
+
+PHONE_FSIZE = 0.3rem
+PHONE_HEIGHT = 0.32rem
+PHONE_BOTTOM = 0.1rem
+PHONE_LETTER_SPACING = 0.01rem
+
+ADD_FSIZE = 0.15rem
+ADD_HEIGHT = 0.16rem
+ADD_BOTTOM = 0.06rem
+ADD_LETTER_SPACING = 0.01rem
+
+CT_M_LEFT = 0.3rem
+CT_ICON_SIZE = 0.38rem
+CT_ICON_FSIZE = 0.2rem
+CT_ICON_MH = 0.1rem
+
+JOIN_BTN_WIDTH = 1.42rem
+JOIN_BTN_HEIGHT = 0.36rem
+JOIN_BTN_FSIZE = 0.15rem
+JOIN_BTN_BORDER_WIDTH = 0.02rem
+
+FOOTER_LOGO_HEIGHT = 0.44rem
+FOOTER_LOGO_M_LEFT = 0.1rem
+
+
 .footer
     width 100%
     margin-top INDEX_SPACE
     background-color FOOTER_BGC
-    min-height 2rem
+    height auto
+    padding INDEX_SPACE 0
+    .phone
+        display block
+        font-size PHONE_FSIZE
+        line-height PHONE_HEIGHT
+        margin-bottom PHONE_BOTTOM
+        color WHITE
+        letter-spacing PHONE_LETTER_SPACING
+    .address
+        font-size ADD_FSIZE
+        line-height ADD_HEIGHT
+        letter-spacing ADD_LETTER_SPACING
+        margin-bottom ADD_BOTTOM
+        color WHITE
+        text-align justify
+    .contact-icons
+        height CT_ICON_SIZE
+        margin-left CT_M_LEFT
+        .link-icon
+            display block
+            width CT_ICON_SIZE
+            color FOOTER_BGC
+            background-color alpha(WHITE, FOOTER_FONT_ALPHA)
+            float left
+            text-align center
+            margin 0 CT_ICON_MH
+            border-radius CT_ICON_SIZE
+            cursor pointer
+            position relative
+            i
+                font-size CT_ICON_FSIZE
+                line-height CT_ICON_SIZE
+            .link-icon-qrcode-pop
+                width 1rem
+                height 1rem
+                position absolute
+                bottom CT_ICON_SIZE + 0.1rem
+                left 50%
+                margin-left -0.5rem
+                display none
+                background-color WHITE
+                box-shadow 0 0 0.2rem 0 alpha(BLACK, 0.1)
+                &:before
+                    content ""
+                    border-arrow(WHITE, 0.06rem, down)
+                    left 50%
+                    margin-left -0.06rem
+                    top 100%
+                    position absolute
+                .imgbox
+                    top 0.1rem
+                    right 0.1rem
+                    bottom 0.1rem
+                    left 0.1rem
+                    position absolute
+                    img
+                        width 100%
+                        height 100%
+                        float left
+            &:hover
+                background-color WHITE
+                .link-icon-qrcode-pop
+                    display block
+            
+                        
+                
+    .logos
+        display block
+        overflow hidden
+    .logo
+        display block
+        height FOOTER_LOGO_HEIGHT
+        margin-left FOOTER_LOGO_M_LEFT
+        float left
+        img
+            width auto
+            height FOOTER_LOGO_HEIGHT
+            float left
+    .btn-join
+        border JOIN_BTN_BORDER_WIDTH solid THEME_COLOR
+        border-radius JOIN_BTN_HEIGHT
+        height JOIN_BTN_HEIGHT
+        line-height JOIN_BTN_HEIGHT - 2*JOIN_BTN_BORDER_WIDTH
+        width JOIN_BTN_WIDTH
+        font-size 0.4*JOIN_BTN_HEIGHT
+        text-align center
+        margin-top FOOTER_LOGO_M_LEFT
+        margin-left FOOTER_LOGO_M_LEFT
+        color THEME_COLOR
+        background-color transparent
+        display block
+        font-weight bold
+        letter-spacing 0.02rem
+        &:hover
+            border-color WHITE
+            background-color WHITE
+            color FOOTER_BGC
+
+    .links
+        list-style none
+        padding 0.2rem 0
+        margin 0.2rem 0 0 0
+        border-top 1px solid alpha(WHITE, 0.2)
+        width 100%
+        text-align center
+        li
+            
+            display inline-block
+            border-right 1px solid alpha(WHITE, 0.2)
+            a
+                padding 0 0.2rem
+                font-size 0.15rem
+                line-height 0.15rem
+                color alpha(WHITE, FOOTER_FONT_ALPHA)
+                display block
+                &:hover
+                    color WHITE
+                
+            &:last-child
+                border-right none
+    .coypright
+        display block
+        font-size 0.12rem
+        color alpha(WHITE, FOOTER_FONT_ALPHA)
+        text-align center
+    
+
+@media SCREEN_SM
+    .footer
+        .phone
+            display block
+            font-size PHONE_FSIZE*FOOTER_SM_PCT
+            line-height PHONE_HEIGHT*FOOTER_SM_PCT
+            margin-bottom PHONE_BOTTOM*FOOTER_SM_PCT
+            letter-spacing PHONE_LETTER_SPACING
+        .address
+            font-size ADD_FSIZE*FOOTER_SM_PCT
+            line-height ADD_HEIGHT*FOOTER_SM_PCT
+            letter-spacing ADD_LETTER_SPACING*FOOTER_SM_PCT
+            margin-bottom ADD_BOTTOM*FOOTER_SM_PCT
+        .contact-icons
+            height CT_ICON_SIZE*FOOTER_SM_PCT
+            margin-left CT_M_LEFT*FOOTER_SM_PCT
+            .link-icon
+                width CT_ICON_SIZE*FOOTER_SM_PCT
+                margin 0 CT_ICON_MH*FOOTER_SM_PCT
+                border-radius CT_ICON_SIZE*FOOTER_SM_PCT
+                i
+                    font-size CT_ICON_FSIZE*FOOTER_SM_PCT
+                    line-height CT_ICON_SIZE*FOOTER_SM_PCT
+        .logo
+            height FOOTER_LOGO_HEIGHT*FOOTER_SM_PCT
+            margin-left FOOTER_LOGO_M_LEFT*FOOTER_SM_PCT
+            img
+                height FOOTER_LOGO_HEIGHT*FOOTER_SM_PCT
+        .btn-join
+            border JOIN_BTN_BORDER_WIDTH*FOOTER_SM_PCT solid THEME_COLOR
+            border-radius JOIN_BTN_HEIGHT*FOOTER_SM_PCT
+            height JOIN_BTN_HEIGHT*FOOTER_SM_PCT
+            line-height JOIN_BTN_HEIGHT*FOOTER_SM_PCT - 2*JOIN_BTN_BORDER_WIDTH*FOOTER_SM_PCT
+            width JOIN_BTN_WIDTH*FOOTER_SM_PCT
+            font-size 0.4*JOIN_BTN_HEIGHT*FOOTER_SM_PCT
+            margin-top FOOTER_LOGO_M_LEFT*FOOTER_SM_PCT
+            margin-left FOOTER_LOGO_M_LEFT*FOOTER_SM_PCT
+
 
 .mobile
     .footer
         margin-top INDEX_SPACE_MOBILE
-        min-height 1rem
+        padding INDEX_SPACE_MOBILE 0
+        .coypright
+            font-size 0.08rem
