--- a/src/apps/1688Web/components/index-gallery/index.pug
+++ b/src/apps/1688Web/components/index-gallery/index.pug
@@ -6,7 +6,7 @@
                     .image-title 金融和中小企业办公总部产业园
                     .image-divider
                     .image-info 园区围绕设计、交流、传播三个运营核心，集文化展示、总部办公、商务休闲于一体
-                img(src=IMG_DIR + "screen_001.png")
+                img(src=IMG_DIR + "screen_001.jpg")
     .col-xs-6.col-sm-3.touch-active.image-item
         .abs-container.abs-hp-3of5
             .abs-content.image-box
@@ -14,7 +14,7 @@
                     .image-title 中艺1688创意产业园
                     .image-divider
                     .image-info 产业园区别于传统文化主题产业园，倡导以绿色化、高端化为方向，在中国抽纱山东进出口公司第二整理加工厂原址进行了全面的修复和再建工程
-                img(src=IMG_DIR + "screen_002.png")
+                img(src=IMG_DIR + "screen_002.jpg")
     .col-xs-6.col-sm-3.touch-active.image-item
         .abs-container.abs-hp-3of5
             .abs-content.image-box
@@ -22,7 +22,7 @@
                     .image-title 金融和中小企业办公总部产业园
                     .image-divider
                     .image-info 园区围绕设计、交流、传播三个运营核心，集文化展示、总部办公、商务休闲于一体
-                img(src=IMG_DIR + "screen_003.png")
+                img(src=IMG_DIR + "screen_003.jpg")
     .col-xs-6.col-sm-3.touch-active.image-item
         .abs-container.abs-hp-3of5
             .abs-content.image-box
@@ -30,7 +30,7 @@
                     .image-title 中艺1688创意产业园
                     .image-divider
                     .image-info 产业园区别于传统文化主题产业园，倡导以绿色化、高端化为方向，在中国抽纱山东进出口公司第二整理加工厂原址进行了全面的修复和再建工程
-                img(src=IMG_DIR + "screen_004.png")
+                img(src=IMG_DIR + "screen_004.jpg")
 .row.scroll-anim.anim-fly-up
     .col-xs-6.col-sm-3.touch-active.image-item
         .abs-container.abs-hp-3of5
@@ -39,7 +39,7 @@
                     .image-title 中艺1688创意产业园
                     .image-divider
                     .image-info 产业园区别于传统文化主题产业园，倡导以绿色化、高端化为方向，在中国抽纱山东进出口公司第二整理加工厂原址进行了全面的修复和再建工程
-                img(src=IMG_DIR + "screen_005.png")
+                img(src=IMG_DIR + "screen_005.jpg")
     .col-xs-6.col-sm-3.touch-active.image-item
         .abs-container.abs-hp-3of5
             .abs-content.image-box
@@ -47,7 +47,7 @@
                     .image-title 金融和中小企业办公总部产业园
                     .image-divider
                     .image-info 园区围绕设计、交流、传播三个运营核心，集文化展示、总部办公、商务休闲于一体
-                img(src=IMG_DIR + "screen_006.png")
+                img(src=IMG_DIR + "screen_006.jpg")
     .col-xs-6.col-sm-3.touch-active.image-item
         .abs-container.abs-hp-3of5
             .abs-content.image-box
@@ -55,7 +55,7 @@
                     .image-title 中艺1688创意产业园
                     .image-divider
                     .image-info 产业园区别于传统文化主题产业园，倡导以绿色化、高端化为方向，在中国抽纱山东进出口公司第二整理加工厂原址进行了全面的修复和再建工程
-                img(src=IMG_DIR + "screen_007.png")
+                img(src=IMG_DIR + "screen_007.jpg")
     .col-xs-6.col-sm-3.touch-active.image-item
         .abs-container.abs-hp-3of5
             .abs-content.image-box
@@ -63,4 +63,4 @@
                     .image-title 金融和中小企业办公总部产业园
                     .image-divider
                     .image-info 园区围绕设计、交流、传播三个运营核心，集文化展示、总部办公、商务休闲于一体
-                img(src=IMG_DIR + "screen_008.png")
+                img(src=IMG_DIR + "screen_008.jpg")
