--- a/src/apps/1688Web/components/news-list/index.styl
+++ b/src/apps/1688Web/components/news-list/index.styl
@@ -42,6 +42,8 @@ NL_PIC_INFO_FSIZE_MOBILE = 0.11rem
 .news-list
     width 100%
     height auto
+    padding 0
+    margin 0
     li
         width auto
         display block
