--- a/src/apps/1688Web/components/sidebar/index.styl
+++ b/src/apps/1688Web/components/sidebar/index.styl
@@ -23,7 +23,7 @@ SB_HEIGHT_2 = SB_LOGO_HEIGHT_HOVER + SB_TITLE_HEIGHT + 6*SB_BTN_HEIGHT
     right 0.1rem
     bottom 0.1rem
     width SB_WIDTH
-    background-color THEME_COLOR
+    background-color transparent
     height SB_HEIGHT_0
     border-radius 0.04rem
     overflow hidden
