--- a/src/apps/1688Web/components/topbar/index.styl
+++ b/src/apps/1688Web/components/topbar/index.styl
@@ -112,6 +112,12 @@ SUBMENU_SPACE = 0.04rem
                         letter-spacing 0
                     @media SCREEN_SM
                         letter-spacing 0
+                        padding 0 0.4*MENU_BTN_SPACE
+                    @media SCREEN_XS
+                        letter-spacing 0
+                        padding 0 0.3*MENU_BTN_SPACE
+                    @media SCREEN_LG
+                        padding 0 0.6*MENU_BTN_SPACE
                     &.active
                     &.sel
                         color MBTN_FCOLOR_ACTIVE
