--- a/src/apps/1688Web/webapp/layout.pug
+++ b/src/apps/1688Web/webapp/layout.pug
@@ -11,6 +11,7 @@ html
         meta(name='description', content='hisense')
         meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0')
         meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
+        meta(name="format-detection" content="telephone=no")
         title 1688Web
         block css
             link(rel='stylesheet', href = CSS_DIR + 'font-awesome.min.css')
