--- a/src/apps/1688Web/components/features/features_1.pug
+++ b/src/apps/1688Web/components/features/features_1.pug
@@ -8,33 +8,33 @@
 .row.fitem-container
     .col-xs-3.scroll-anim.anim-fly-up
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-jiangbei
+            i.iconfont.icon-jiangbei.font-blue
             .fitem-title 创业成果
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-200ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-kongjian
+            i.iconfont.icon-kongjian.font-blue
             .fitem-title 众创空间
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-400ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-fudao
+            i.iconfont.icon-fudao.font-blue
             .fitem-title 创业辅导
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-600ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-daoshi
+            i.iconfont.icon-daoshi.font-blue
             .fitem-title 创业导师
     .col-xs-3.scroll-anim.anim-fly-up
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-peixun2
+            i.iconfont.icon-peixun2.font-blue
             .fitem-title 创业培训
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-200ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-luyan
+            i.iconfont.icon-luyan.font-blue
             .fitem-title 创业路演
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-400ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-fuchi
+            i.iconfont.icon-fuchi.font-blue
             .fitem-title 创业扶持
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-600ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-gengduo
+            i.iconfont.icon-gengduo.font-blue
             .fitem-title 期待更多
