--- a/src/apps/1688Web/components/features/features_2.pug
+++ b/src/apps/1688Web/components/features/features_2.pug
@@ -8,33 +8,33 @@
 .row.fitem-container
     .col-xs-3.scroll-anim.anim-fly-up
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-rongzi
+            i.iconfont.icon-rongzi.font-blue
             .fitem-title 融资服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-200ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-caishui
+            i.iconfont.icon-caishui.font-blue
             .fitem-title 财税服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-400ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-hr
+            i.iconfont.icon-hr.font-blue
             .fitem-title 人力资源
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-600ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-zixun
+            i.iconfont.icon-zixun.font-blue
             .fitem-title 管理咨询
     .col-xs-3.scroll-anim.anim-fly-up
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-falv
+            i.iconfont.icon-falv.font-blue
             .fitem-title 法律服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-200ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-zhuanli
+            i.iconfont.icon-zhuanli.font-blue
             .fitem-title 专利服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-400ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-peixun
+            i.iconfont.icon-peixun.font-blue
             .fitem-title 培训服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-600ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-qita
+            i.iconfont.icon-qita.font-blue
             .fitem-title 其他服务
