--- a/src/apps/1688Web/webapp/stylus/color.styl
+++ b/src/apps/1688Web/webapp/stylus/color.styl
@@ -76,3 +76,251 @@ PURPLE_WISTERIA = #9b59b6
 PURPLE_SEANCE = #9a12b3
 PURPLE_SUNSET = #6902b9
 
+// bg colors
+// ------------------------------------------------------------------
+LIGHTEN_PCT = 10%
+DARKEN_PCT = 10%
+
+.bg-white
+    background-color WHITE !important
+.bg-black
+    background-color BLACK !important
+
+.bg-gray
+    background-color GRAY !important
+.bg-gray-cascade
+    background-color GRAY_CASCADE !important
+.bg-gray-silver
+    background-color GRAY_SILVER !important
+.bg-gray-steel
+    background-color GRAY_STEEL !important
+.bg-gray-cararra
+    background-color GRAY_CARARRA !important
+.bg-gray-gallery
+    background-color GRAY_GALLERY !important
+.bg-gray-f9
+    background-color GRAY_F9 !important
+.bg-gray-f5
+    background-color GRAY_F5 !important
+.bg-gray-f0
+    background-color GRAY_F0 !important
+.bg-gray-e3
+    background-color GRAY_E3 !important
+.bg-gray-eb
+    background-color GRAY_EB !important
+.bg-gray-ee
+    background-color GRAY_EE !important
+.bg-gray-d6
+    background-color GRAY_D6 !important
+.bg-gray-cc
+    background-color GRAY_CC !important
+.bg-gray-bb
+    background-color GRAY_BB !important
+.bg-gray-99
+    background-color GRAY_99 !important
+.bg-gray-66
+    background-color GRAY_66 !important
+.bg-gray-33
+    background-color GRAY_33 !important
+
+.bg-blue
+    background-color BLUE !important
+.bg-blue-hoki
+    background-color BLUE_HOKI !important
+.bg-blue-steel
+    background-color BLUE_STEEL !important
+.bg-blue-ocean
+    background-color BLUE_OCEAN !important
+.bg-blue-madison
+    background-color BLUE_MADISON !important
+.bg-blue-chambray
+    background-color BLUE_CHAMBRAY !important
+.bg-blue-ebonyclay
+    background-color BLUE_EBONYCLAY !important
+
+.bg-green
+    background-color GREEN !important
+.bg-green-meadow
+    background-color GREEN_MEADOW !important
+.bg-green-seagreen
+    background-color GREEN_SEAGREEN !important
+.bg-green-turquoise
+    background-color GREEN_TURQUOISE !important
+.bg-green-haze
+    background-color GREEN_HAZE !important
+.bg-green-jungle
+    background-color GREEN_JUNGLE !important
+.bg-green-grass
+    background-color GREEN_GRASS !important
+
+.bg-red
+    background-color RED !important
+.bg-red-pink
+    background-color RED_PINK !important
+.bg-red-sunglo
+    background-color RED_SUNGLO !important
+.bg-red-intense
+    background-color RED_INTENSE !important
+.bg-red-thunderbird
+    background-color RED_THUNDERBIRD !important
+.bg-red-flamingo
+    background-color RED_FLAMINGO !important
+.bg-red-orange
+    background-color RED_ORANGE !important
+
+.bg-yellow
+    background-color YELLOW !important
+.bg-yellow-gold
+    background-color YELLOW_GOLD !important
+.bg-yellow-casablanca
+    background-color YELLOW_CASABLANCA !important
+.bg-yellow-crusta
+    background-color YELLOW_CRUSTA !important
+.bg-yellow-lemon
+    background-color YELLOW_LEMON !important
+.bg-yellow-saffron
+    background-color YELLOW_SAFFRON !important
+.bg-yellow-sunset
+    background-color YELLOW_SUNSET !important
+.bg-yellow-bronze
+    background-color YELLOW_BRONZE !important
+
+.bg-purple
+    background-color PURPLE !important
+.bg-purple-plum
+    background-color PURPLE_PLUM !important
+.bg-purple-medium
+    background-color PURPLE_MEDIUM !important
+.bg-purple-studio
+    background-color PURPLE_STUDIO !important
+.bg-purple-wisteria
+    background-color PURPLE_WISTERIA !important
+.bg-purple-seance
+    background-color PURPLE_SEANCE !important
+.bg-purple-sunset
+    background-color PURPLE_SUNSET !important
+
+// font colors
+// ------------------------------------------------------------------
+
+.font-white
+    color WHITE !important
+.font-black
+    color BLACK !important
+
+.font-gray
+    color GRAY !important
+.font-gray-cascade
+    color GRAY_CASCADE !important
+.font-gray-silver
+    color GRAY_SILVER !important
+.font-gray-steel
+    color GRAY_STEEL !important
+.font-gray-cararra
+    color GRAY_CARARRA !important
+.font-gray-gallery
+    color GRAY_GALLERY !important
+.font-gray-f9
+    color GRAY_F9 !important
+.font-gray-f5
+    color GRAY_F5 !important
+.font-gray-f0
+    color GRAY_F0 !important
+.font-gray-ee
+    color GRAY_EE !important
+.font-gray-eb
+    color GRAY_EB !important
+.font-gray-e3
+    color GRAY_E3 !important
+.font-gray-d6
+    color GRAY_D6 !important
+.font-gray-cc
+    color GRAY_CC !important
+.font-gray-bb
+    color GRAY_BB !important
+.font-gray-99
+    color GRAY_99 !important
+.font-gray-66
+    color GRAY_66 !important
+.font-gray-33
+    color GRAY_33 !important
+
+
+.font-blue
+    color BLUE !important
+.font-blue-hoki
+    color BLUE_HOKI !important
+.font-blue-steel
+    color BLUE_STEEL !important
+.font-blue-ocean
+    color BLUE_OCEAN !important
+.font-blue-madison
+    color BLUE_MADISON !important
+.font-blue-chambray
+    color BLUE_CHAMBRAY !important
+.font-blue-ebonyclay
+    color BLUE_EBONYCLAY !important
+
+.font-green
+    color GREEN !important
+.font-green-meadow
+    color GREEN_MEADOW !important
+.font-green-seagreen
+    color GREEN_SEAGREEN !important
+.font-green-turquoise
+    color GREEN_TURQUOISE !important
+.font-green-haze
+    color GREEN_HAZE !important
+.font-green-jungle
+    color GREEN_JUNGLE !important
+.font-green-grass
+    color GREEN_GRASS !important
+
+.font-red
+    color RED !important
+.font-red-pink
+    color RED_PINK !important
+.font-red-sunglo
+    color RED_SUNGLO !important
+.font-red-intense
+    color RED_INTENSE !important
+.font-red-thunderbird
+    color RED_THUNDERBIRD !important
+.font-red-flamingo
+    color RED_FLAMINGO !important
+.font-red-orange
+    color RED_ORANGE !important
+
+.font-yellow
+    color YELLOW !important
+.font-yellow-gold
+    color YELLOW_GOLD !important
+.font-yellow-casablanca
+    color YELLOW_CASABLANCA !important
+.font-yellow-crusta
+    color YELLOW_CRUSTA !important
+.font-yellow-lemon
+    color YELLOW_LEMON !important
+.font-yellow-saffron
+    color YELLOW_SAFFRON !important
+.font-yellow-sunset
+    color YELLOW_SUNSET !important
+.font-yellow-bronze
+    color YELLOW_BRONZE !important
+
+.font-purple
+    color PURPLE !important
+.font-purple-plum
+    color PURPLE_PLUM !important
+.font-purple-medium
+    color PURPLE_MEDIUM !important
+.font-purple-studio
+    color PURPLE_STUDIO !important
+.font-purple-wisteria
+    color PURPLE_WISTERIA !important
+.font-purple-seance
+    color PURPLE_SEANCE !important
+.font-purple-sunset
+    color PURPLE_SUNSET !important
+
+
