--- a/src/libs/scroll-anim/scrollAnim.styl
+++ b/src/libs/scroll-anim/scrollAnim.styl
@@ -1,42 +1,85 @@
 .scroll-anim
     visibility hidden
-    animation-delay 0s
-    animation-name none
+    -webkit-animation none
+    -moz-animation none
+    -ms-animation none
+    -o-animation none
+    animation none
 .anim-fly-up
     &.anim-in
-        animation-fill-mode forwards
-        animation-duration 1s
-        animation-name flyup
+        -webkit-animation flyup 1s forwards
+        -moz-animation flyup 1s forwards
+        -ms-animation flyup 1s forwards
+        -o-animation flyup 1s forwards
+        animation flyup 1s forwards
 .anim-fly-left
     &.anim-in
-        animation-fill-mode forwards
-        animation-duration 1s
-        animation-name flyleft
+        -webkit-animation flyleft 1s forwards
+        -moz-animation flyleft 1s forwards
+        -ms-animation flyleft 1s forwards
+        -o-animation flyleft 1s forwards
+        animation flyleft 1s forwards
 .anim-fly-right
     &.anim-in
-        animation-fill-mode forwards
-        animation-duration 1s
-        animation-name flyright
+        -webkit-animation flyright 1s forwards
+        -moz-animation flyright 1s forwards
+        -ms-animation flyright 1s forwards
+        -o-animation flyright 1s forwards
+        animation flyright 1s forwards
 .anim-alpha-show
     &.anim-in
-        animation-fill-mode forwards
-        animation-duration 1s
-        animation-name alphashow
+        -webkit-animation alphashow 1s forwards
+        -moz-animation alphashow 1s forwards
+        -ms-animation alphashow 1s forwards
+        -o-animation alphashow 1s forwards
+        animation alphashow 1s forwards
 .trans-delay-100ms
+    -webkit-animation-delay 100ms
+    -moz-animation-delay 100ms
+    -ms-animation-delay 100ms
+    -o-animation-delay 100ms
     animation-delay 100ms
 .trans-delay-200ms
+    -webkit-animation-delay 200ms
+    -moz-animation-delay 200ms
+    -ms-animation-delay 200ms
+    -o-animation-delay 200ms
     animation-delay 200ms
 .trans-delay-300ms
+    -webkit-animation-delay 300ms
+    -moz-animation-delay 300ms
+    -ms-animation-delay 300ms
+    -o-animation-delay 300ms
     animation-delay 300ms
 .trans-delay-400ms
+    -webkit-animation-delay 400ms
+    -moz-animation-delay 400ms
+    -ms-animation-delay 400ms
+    -o-animation-delay 400ms
     animation-delay 400ms
 .trans-delay-500ms
+    -webkit-animation-delay 500ms
+    -moz-animation-delay 500ms
+    -ms-animation-delay 500ms
+    -o-animation-delay 500ms
     animation-delay 500ms
 .trans-delay-600ms
+    -webkit-animation-delay 600ms
+    -moz-animation-delay 600ms
+    -ms-animation-delay 600ms
+    -o-animation-delay 600ms
     animation-delay 600ms
 .trans-delay-700ms
+    -webkit-animation-delay 700ms
+    -moz-animation-delay 700ms
+    -ms-animation-delay 700ms
+    -o-animation-delay 700ms
     animation-delay 700ms
 .trans-delay-800ms
+    -webkit-animation-delay 800ms
+    -moz-animation-delay 800ms
+    -ms-animation-delay 800ms
+    -o-animation-delay 800ms
     animation-delay 800ms
 
 @keyframes alphashow
