1688Web : fix anim delay

--- a/src/libs/scroll-anim/scrollAnim.styl
+++ b/src/libs/scroll-anim/scrollAnim.styl
@@ -34,53 +34,53 @@
         -o-animation alphashow 1s forwards
         animation alphashow 1s forwards
 .trans-delay-100ms
-    -webkit-animation-delay 100ms
-    -moz-animation-delay 100ms
-    -ms-animation-delay 100ms
-    -o-animation-delay 100ms
-    animation-delay 100ms
+    -webkit-animation-delay 100ms !important
+    -moz-animation-delay 100ms !important
+    -ms-animation-delay 100ms !important
+    -o-animation-delay 100ms !important
+    animation-delay 100ms !important
 .trans-delay-200ms
-    -webkit-animation-delay 200ms
-    -moz-animation-delay 200ms
-    -ms-animation-delay 200ms
-    -o-animation-delay 200ms
-    animation-delay 200ms
+    -webkit-animation-delay 200ms !important
+    -moz-animation-delay 200ms !important
+    -ms-animation-delay 200ms !important
+    -o-animation-delay 200ms !important
+    animation-delay 200ms !important
 .trans-delay-300ms
-    -webkit-animation-delay 300ms
-    -moz-animation-delay 300ms
-    -ms-animation-delay 300ms
-    -o-animation-delay 300ms
-    animation-delay 300ms
+    -webkit-animation-delay 300ms !important
+    -moz-animation-delay 300ms !important
+    -ms-animation-delay 300ms !important
+    -o-animation-delay 300ms !important
+    animation-delay 300ms !important
 .trans-delay-400ms
-    -webkit-animation-delay 400ms
-    -moz-animation-delay 400ms
-    -ms-animation-delay 400ms
-    -o-animation-delay 400ms
-    animation-delay 400ms
+    -webkit-animation-delay 400ms !important
+    -moz-animation-delay 400ms !important
+    -ms-animation-delay 400ms !important
+    -o-animation-delay 400ms !important
+    animation-delay 400ms !important
 .trans-delay-500ms
-    -webkit-animation-delay 500ms
-    -moz-animation-delay 500ms
-    -ms-animation-delay 500ms
-    -o-animation-delay 500ms
-    animation-delay 500ms
+    -webkit-animation-delay 500ms !important
+    -moz-animation-delay 500ms !important
+    -ms-animation-delay 500ms !important
+    -o-animation-delay 500ms !important
+    animation-delay 500ms !important
 .trans-delay-600ms
-    -webkit-animation-delay 600ms
-    -moz-animation-delay 600ms
-    -ms-animation-delay 600ms
-    -o-animation-delay 600ms
-    animation-delay 600ms
+    -webkit-animation-delay 600ms !important
+    -moz-animation-delay 600ms !important
+    -ms-animation-delay 600ms !important
+    -o-animation-delay 600ms !important
+    animation-delay 600ms !important
 .trans-delay-700ms
-    -webkit-animation-delay 700ms
-    -moz-animation-delay 700ms
-    -ms-animation-delay 700ms
-    -o-animation-delay 700ms
-    animation-delay 700ms
+    -webkit-animation-delay 700ms !important
+    -moz-animation-delay 700ms !important
+    -ms-animation-delay 700ms !important
+    -o-animation-delay 700ms !important
+    animation-delay 700ms !important
 .trans-delay-800ms
-    -webkit-animation-delay 800ms
-    -moz-animation-delay 800ms
-    -ms-animation-delay 800ms
-    -o-animation-delay 800ms
-    animation-delay 800ms
+    -webkit-animation-delay 800ms !important
+    -moz-animation-delay 800ms !important
+    -ms-animation-delay 800ms !important
+    -o-animation-delay 800ms !important
+    animation-delay 800ms !important
 
 @keyframes alphashow
     0%
