1688Admin : Tweak topbar

--- a/src/apps/1688Admin/components/login/index.pug
+++ b/src/apps/1688Admin/components/login/index.pug
@@ -1,6 +1,6 @@
 .login-content
-    .login-logo LOGO
-        //img(src='images/logo.png')
+    .login-logo
+        img(src=IMG_DIR + 'logo.png')
     form#form_login.login-box(action="?" name="loginform")
         .row
             .col-xs-12
