--- a/src/apps/1688Admin/components/login/index.styl
+++ b/src/apps/1688Admin/components/login/index.styl
@@ -102,15 +102,14 @@ LOGIN_BTN_FSIZE = 0.18rem
 
 .login-logo
     position absolute
-    width LOGIN_LOGO_WIDTH
+    width auto
     height LOGIN_LOGO_HEIGHT
-    background-color alpha(BLACK, 0.2)
     top LOGIN_LOGO_SPACE
     left LOGIN_LOGO_SPACE
     color WHITE
     img
         height 100%
-        width 100%
+        width auto
         float left
 
 .mobile
@@ -126,7 +125,7 @@ LOGIN_BTN_FSIZE = 0.18rem
         .btn-login-pillow
             right LOGIN_V_SPACE - LOGIN_BTN_PILLOW_SPACE
     .login-logo
-        width LOGIN_LOGO_WIDTH*0.8
+        width auto
         height LOGIN_LOGO_HEIGHT*0.8
         top 2*DEFAULT_SPACE
         left 2*DEFAULT_SPACE
