--- a/src/apps/1688Admin/webapp/stylus/index.styl
+++ b/src/apps/1688Admin/webapp/stylus/index.styl
@@ -75,6 +75,8 @@ body
     z-index Z_INDEX_RIGHT
     -webkit-overflow-scrolling touch 
     overflow auto
+    &.mainpage
+        left 0
 .footer-container
     position absolute
     left LEFT_WIDTH
