--- a/src/apps/1688Admin/webapp/index-system.pug
+++ b/src/apps/1688Admin/webapp/index-system.pug
@@ -8,8 +8,10 @@ block css
 block content
     .main-content
         .top-container
-            include ../components/topbar/index-main
-        .right-container.mainpage
+            include ../components/topbar/index
+        .left-container#left_container
+            include ../components/tree-menu/index
+        .right-container
             iframe.main-iframe(frameborder = 0 src = "dashboard.html")
         .mobile-menu-mask#menu_mask
 
