--- a/src/apps/1688Web/components/index-news/index-news-slider/index.pug
+++ b/src/apps/1688Web/components/index-news/index-news-slider/index.pug
@@ -1,4 +1,4 @@
-.ins
+.ins.owl-carousel.owl-theme
     a.ins-item(href="javascript:;")
         .abs-container.abs-hp-1of6
             .abs-content
