--- a/src/apps/1688Web/components/index-news/index-news-slider/index.styl
+++ b/src/apps/1688Web/components/index-news/index-news-slider/index.styl
@@ -67,13 +67,13 @@ INS_INFO_FSIZE_MOBILE = 0.1rem
                 overflow hidden
                 text-overflow ellipsis
                 white-space nowrap
-    .owl-controls
+    .owl-dots
         position absolute
         width 100%
         left 0
         font-size 0
         bottom INDEX_NEWS_SPACE
-        .owl-page
+        .owl-dot
             span
                 width 0.2rem !important
                 height 0.06rem !important
@@ -106,13 +106,13 @@ INS_INFO_FSIZE_MOBILE = 0.1rem
                     overflow hidden
                     text-overflow ellipsis
                     white-space nowrap
-        .owl-controls
+        .owl-dots
             position absolute
             width 100%
             left 0
             font-size 0
             bottom 0.7*INDEX_NEWS_SPACE_MOBILE
-            .owl-page
+            .owl-dot
                 span
                     width 0.1rem !important
                     height 0.02rem !important
