--- a/src/apps/1688Web/webapp/index.pug
+++ b/src/apps/1688Web/webapp/index.pug
@@ -1,10 +1,10 @@
 extends layout
 
 block css
-    link(rel='stylesheet', href=CSS_DIR + 'font-awesome.min.css')
-    link(rel='stylesheet', href=CSS_DIR + 'index.css')
-    link(rel='stylesheet', href=CSS_DIR + 'owl.carousel.css')
-    link(rel='stylesheet', href=CSS_DIR + 'owl.theme.css')
+    link(rel='stylesheet', href= CSS_DIR + 'font-awesome.min.css')
+    link(rel='stylesheet', href= CSS_DIR + 'index.css')
+    link(rel='stylesheet', href= CSS_DIR + 'owl.carousel.min.css')
+    link(rel='stylesheet', href= CSS_DIR + 'owl.theme.default.min.css')
 
 block content
     .main-content
@@ -32,7 +32,7 @@ block js
     script(src=JS_DIR + 'jquery.min.js')
     script(src=JS_DIR + 'bootstrap.min.js')
     script(src=JS_DIR + 'iscroll.js')
-    script(src=JS_DIR + 'owl.carousel.js')
+    script(src=JS_DIR + 'owl.carousel.min.js')
     script(src=JS_DIR + 'app.js')
     script(type='text/javascript').
         $(document).ready(function(){
@@ -115,9 +115,10 @@ block js
             
             //新闻轮播
             $('.ins').owlCarousel({
-                navigation:false,
-                autoPlay:true,
-                singleItem:true
+                items : 1,
+                autoplay : true,
+                nav : false,
+                loop : true
             });
         });
 
