1688Web : add mobile index

--- a/src/apps/1688Web/components/topbar/index.styl
+++ b/src/apps/1688Web/components/topbar/index.styl
@@ -228,7 +228,7 @@ SUBMENU_SPACE = 0.04rem
                             color MBTN_FCOLOR_ACTIVE_MOBILE
                             background-color MBTN_BGC_ACTIVE_MOBILE
 
-
+/*
 .tablet
     .topbar
         .logo
@@ -249,9 +249,10 @@ SUBMENU_SPACE = 0.04rem
         .user-area
             margin-right 0.5*(TOP_HEIGHT - USER_HEIGHT)
     .topbar-space
-        display block
+        display block*/
 
 .mobile
+.tablet
     .topbar
         .topbar-content
             height TOP_HEIGHT_MOBILE
