--- a/src/apps/1688Web/webapp/index.pug
+++ b/src/apps/1688Web/webapp/index.pug
@@ -1,16 +1,35 @@
 extends layout
 
+block redirect
+    script(type='text/javascript').
+        //移动端跳转到移动端首页
+        function browserRedirect() { 
+            var sUserAgent= navigator.userAgent.toLowerCase(); 
+            var bIsIpad= sUserAgent.match(/ipad/i) == "ipad"; 
+            var bIsIphoneOs= sUserAgent.match(/iphone os/i) == "iphone os"; 
+            var bIsMidp= sUserAgent.match(/midp/i) == "midp"; 
+            var bIsUc7= sUserAgent.match(/rv:1.2.3.4/i) == "rv:1.2.3.4"; 
+            var bIsUc= sUserAgent.match(/ucweb/i) == "ucweb"; 
+            var bIsAndroid= sUserAgent.match(/android/i) == "android"; 
+            var bIsCE= sUserAgent.match(/windows ce/i) == "windows ce"; 
+            var bIsWM= sUserAgent.match(/windows mobile/i) == "windows mobile"; 
+            if (bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) { 
+                window.location.href= '/html/m-index.html'; 
+            }
+        } 
+        browserRedirect();
+
 block css
     link(rel='stylesheet', href= CSS_DIR + 'font-awesome.min.css')
-    link(rel='stylesheet', href= CSS_DIR + 'index.css')
     link(rel='stylesheet', href= CSS_DIR + 'owl.carousel.min.css')
     link(rel='stylesheet', href= CSS_DIR + 'owl.theme.default.min.css')
+    link(rel='stylesheet', href= CSS_DIR + 'index.css')
 
 block content
     .main-content
         include ../components/topbar/index
+        .body-mask
         .main-body
-            .body-mask
             .topbar-space
             include ../components/slider/index
             .row-space-0
