--- a/src/apps/1688Web/webapp/stylus/iconfont.styl
+++ b/src/apps/1688Web/webapp/stylus/iconfont.styl
@@ -42,3 +42,11 @@
 .icon-zhuanli:before { content: "\e689"; }
 
 .icon-qita:before { content: "\e603"; }
+
+.icon-yonghu:before { content: "\e6b3"; }
+
+.icon-shouye:before { content: "\e6d9"; }
+
+.icon-ermai:before { content: "\e72f"; }
+
+.icon-zixun1:before { content: "\e730"; }
