--- a/src/apps/1688Web/webapp/layout.pug
+++ b/src/apps/1688Web/webapp/layout.pug
@@ -13,6 +13,7 @@ html
         meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
         meta(name="format-detection" content="telephone=no")
         title 1688Web
+        block redirect
         block css
             link(rel='stylesheet', href = CSS_DIR + 'font-awesome.min.css')
             link(rel='stylesheet', href = CSS_DIR + 'index.css')
