1688Admin : Add system list

--- a/src/apps/1688Admin/components/topbar/index-main.pug
+++ b/src/apps/1688Admin/components/topbar/index-main.pug
@@ -1,7 +1,7 @@
 .topbar
     .logo
         img(src=IMG_DIR + 'logo-white.png')
-        |中艺1688双创智慧园区后台管理系统
+        |双创智慧园区后台管理系统
     .menubtn.touch-active#menu_btn
         i.fa.fa-navicon
     .right-shoulder
