--- a/src/apps/1688Admin/webapp/index.pug
+++ b/src/apps/1688Admin/webapp/index.pug
@@ -10,7 +10,7 @@ block content
         .top-container
             include ../components/topbar/index-main
         .right-container.mainpage
-            iframe.main-iframe(frameborder = 0 src = "dashboard.html")
+            iframe.main-iframe(frameborder = 0 src = "home-main.html")
         .mobile-menu-mask#menu_mask
 
 block js
