1688Admin : homepage system list

--- a/src/apps/1688Admin/components/system-list/index.pug
+++ b/src/apps/1688Admin/components/system-list/index.pug
@@ -18,7 +18,7 @@
         a.sl-btn.touch-active(href='#')
             .sl-btn-icon
                 i.fa.fa-print
-            .sl-btn-title 协调办公
+            .sl-btn-title 协同办公
     .col-xs-4
         a.sl-btn.touch-active(href='#')
             .sl-btn-icon
