--- a/src/apps/1688Admin/webapp/home-main.pug
+++ b/src/apps/1688Admin/webapp/home-main.pug
@@ -16,11 +16,11 @@ block content
                 include ../components/system-list/index
                 .section-title
                     span.section-title-icon
-                    span.section-title-text 园区面积分布
+                    span.section-title-text 待办事项
             .col-sm-12.col-md-4
                 .section-title
                     span.section-title-icon
-                    span.section-title-text 待办事项
+                    span.section-title-text 通知公告
             //
                 .col-sm-8.col-xs-12.abs-container.abs-hp-1of3.abs-hp-mobile-1of2
                     .abs-content
