--- a/src/apps/1688Web/webapp/index.pug
+++ b/src/apps/1688Web/webapp/index.pug
@@ -35,7 +35,7 @@ block content
             .row-space-0
                 .container
                     include ../components/index-news/index
-            .block-features.row-space-0
+            .block-features.row-space-partner
                 .container
                     include ../components/features/features_1
                     include ../components/features/features_2
